--- a/css/folhaDeEstilo.css
+++ b/css/folhaDeEstilo.css
@@ -199,9 +199,8 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
-
     gap: 60px;
 
 }
