--- a/css/folhaDeEstilo.css
+++ b/css/folhaDeEstilo.css
@@ -88,6 +88,7 @@ main {
     background-color: #212428;
     border-bottom: solid 0.1px rgb(0, 0, 0);
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .info {
@@ -747,6 +748,14 @@ footer {
     gap: 40px;
 }
 
+.menu-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 40px;
+}
+
 a {
     color: rgb(203, 214, 223);
 }
@@ -881,6 +890,7 @@ p {
         grid-area: sobre-mim;
         background-color: #212428;
         border-bottom: solid 0.1px rgb(0, 0, 0);
+        
     }
 
     .menu-mobile {
@@ -891,6 +901,14 @@ p {
         height: 35px;
         box-sizing: border-box;
         overflow: hidden;
+    }
+
+    .menu-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 20px;
     }
 }
 
@@ -992,17 +1010,23 @@ p {
         height: 100vh;
         justify-content: center;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
         position: absolute;
         right: 0px;
-        gap: 10px;
-        padding: 40px;
         background-color: rgba(15, 17, 19, 0.5);
         backdrop-filter: blur(10px);
         animation-name: menu-slide;
         animation-duration: 1s;
         animation-direction: normal;
         animation-iteration-count: 1;
+    }
+
+    .menu-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 10px;
     }
 
     [fadeout-menu] {
@@ -1058,7 +1082,7 @@ p {
         display: grid;
         justify-items: center;
         grid-template-columns: 100%;
-        grid-template-rows: 800px auto auto auto auto auto;
+        grid-template-rows: auto auto auto auto auto auto;
         grid-template-areas:
             "sobre-mim"
             "skills"
@@ -1078,6 +1102,8 @@ p {
         grid-area: sobre-mim;
         background-color: #212428;
         border-bottom: solid 0.1px rgb(0, 0, 0);
+        padding-bottom: 10px;
+        padding-top: 100px;
     }
 
     .info {
