--- a/pokemon-project/src/sass/ContainerItems.scss
+++ b/pokemon-project/src/sass/ContainerItems.scss
@@ -113,14 +113,23 @@
 }
 
 .btn-more{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 1rem;
-    border-radius: 10px;
+    border-radius: 20px;
     border: none;
-    background-color: rgb(211, 21, 21);
+    background-color: rgb(34, 77, 221);
     color: white;
     font-size: 1rem;
+    gap: 0.3rem;
+    box-shadow: 0px 0px 20px rgba(0,0,0,.2);
+    transition: all 500ms;
     &:hover{
-        background-color: rgb(190, 18, 18);
+        background-color: rgb(23, 62, 190);
+    }
+    img{
+        width: 20px;
     }
 }
 
