--- a/pokemon-project/src/sass/ButtonTop.scss
+++ b/pokemon-project/src/sass/ButtonTop.scss
@@ -1,5 +1,5 @@
 .btn-scroll-top{
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     position: fixed;
