--- a/pokemon-project/src/sass/InfoPokemon.scss
+++ b/pokemon-project/src/sass/InfoPokemon.scss
@@ -20,9 +20,37 @@
     height: 80%;
     background-color: rgb(241, 84, 84);
     border-radius: 20px;
-    animation-name: animaInfo;
+    animation-name: animaIn;
     animation-duration: 500ms;
+    
+    
 }
+
+[info-close]{
+    animation-name: animaOut;
+    animation-duration: 500ms; 
+    animation-fill-mode: forwards;
+}
+
+
+@keyframes animaIn {
+    from {
+        transform: translateY(500px);
+    }
+    to {
+        transform: translateY(0px);
+    }
+}
+
+@keyframes animaOut {
+    from {
+        transform: translateY(0px);
+    }
+    to {
+        transform: translateY(1000px);
+    }
+}
+
 
 .info-pokemon-container-header {
     box-sizing: border-box;
@@ -32,7 +60,6 @@
     width: 100%;
     height: 20%;
     padding: 0.2rem;
-    
 }
 
 @keyframes animaInfo {
@@ -57,16 +84,16 @@
         object-position: center;
         position: relative;
         width: 300px;
-        animation-name: animaImg ;
+        animation-name: animaImg;
         animation-duration: 2s;
         animation-iteration-count: infinite;
         animation-direction: alternate;
         animation-timing-function: ease-in-out;
-        top: -20px
+        top: -20px;
     }
 }
 
-.info-type{
+.info-type {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,7 +103,7 @@
     border-radius: 20px;
     color: black;
     font-size: 0.8rem;
-    >img{
+    > img {
         width: 15px;
     }
 }
@@ -100,7 +127,6 @@
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
 }
-
 
 .info-pokemon-text-container-main {
     box-sizing: border-box;
@@ -130,20 +156,19 @@
     color: rgb(255, 255, 255);
 }
 
-.container-title-type{
+.container-title-type {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
 }
 
-.title-id{
+.title-id {
     display: flex;
     justify-content: flex-start;
     align-items: baseline;
     gap: 0.5rem;
 }
-
 
 .text-container-details {
     width: 100%;
@@ -151,7 +176,7 @@
     justify-content: space-between;
     gap: 2rem;
     height: 10%;
-    >div{
+    > div {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -166,8 +191,6 @@
     justify-content: center;
     flex-direction: column;
     height: 70%;
-
-    
 }
 
 .stats-container {
@@ -176,30 +199,35 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     gap: 0.5rem;
-    >p{
+    > p {
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 30%;
         font-size: 0.8rem;
         font-weight: 500;
-        >span{
+        > span {
             font-size: 0.7rem;
         }
     }
-    >progress{
+    > progress {
         width: 70%;
         height: 8px;
         border-radius: 10px;
         border: none;
         background-color: rgb(231, 231, 231);
-        
     }
-    progress::-moz-progress-bar { background: rgb(119, 235, 177); }
-    progress::-webkit-progress-value { background: rgb(119, 235, 177); }
-    progress { color: rgb(119, 235, 177); }
+    progress::-moz-progress-bar {
+        background: rgb(119, 235, 177);
+    }
+    progress::-webkit-progress-value {
+        background: rgb(119, 235, 177);
+    }
+    progress {
+        color: rgb(119, 235, 177);
+    }
 }
 
 .bnt-close {
@@ -208,7 +236,6 @@
     height: 30px;
     background: none;
     border-radius: 50%;
-   
 }
 
 .close-icon {
@@ -219,7 +246,7 @@
     }
 }
 
-.abilities{
+.abilities {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -228,8 +255,5 @@
     text-transform: capitalize;
     font-size: 0.8rem;
     border-radius: 10px;
-    color:rgba(19, 19, 19, 0.4)
-    
-    
+    color: rgba(19, 19, 19, 0.4);
 }
-
