--- a/pokemon-project/src/sass/InfoPokemon.scss
+++ b/pokemon-project/src/sass/InfoPokemon.scss
@@ -26,6 +26,7 @@
     border-radius: 20px;
     animation-name: animaIn;
     animation-duration: 500ms;
+    background-color: rgb(255, 255, 255);
     
     
 }
