--- a/pokemon-project/src/sass/InfoPokemon.scss
+++ b/pokemon-project/src/sass/InfoPokemon.scss
@@ -11,9 +11,11 @@
     animation-name: animaInfo;
     animation-duration: 500ms;
     
+    
 }
 
 .info-pokemon-container {
+    position: absolute;
     box-sizing: border-box;
     overflow: hidden;
     display: flex;
@@ -26,7 +28,8 @@
     border-radius: 20px;
     animation-name: animaIn;
     animation-duration: 500ms;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(151, 151, 151);
+    z-index: -1;
     
     
 }
@@ -284,4 +287,13 @@
     font-size: 0.8rem;
     border-radius: 10px;
     color: rgba(19, 19, 19, 0.4);
+}
+
+.bg-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    z-index: -1;
+    top: 0;
 }
