--- a/pokemon-project/src/sass/InfoPokemon.scss
+++ b/pokemon-project/src/sass/InfoPokemon.scss
@@ -293,6 +293,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top;
     position: absolute;
     z-index: -1;
     top: 0;
