--- a/pokemon-project/src/sass/App.scss
+++ b/pokemon-project/src/sass/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import "_mixins.scss";
 
 *{
     margin: 0;
@@ -27,4 +28,10 @@
 
 .main{
     width: 100%;
+    @include mobile{
+        box-sizing: border-box;
+        overflow: hidden;
+        margin-top: 100px;
+        width: 100%;
+    }
 }
