--- a/pokemon-project/src/sass/ContainerInfo.scss
+++ b/pokemon-project/src/sass/ContainerInfo.scss
@@ -1,3 +1,5 @@
+@import "_mixins.scss";
+
 .container-info {
     width: 100%;
     height: 500px;
@@ -14,9 +16,20 @@
     padding: 1rem;
     h1 {
         font-size: 5rem;
+        @include mobile{
+            font-size: 3rem;
+            text-align: center;
+            
+        }
     }
     p {
         font-size: 1.3rem;
+        @include mobile{
+            font-size: 1rem;
+            text-align: center;
+            max-width: 20rem ;
+            
+        }
     }
 }
 
