--- a/pokemon-project/src/sass/ContainerItems.scss
+++ b/pokemon-project/src/sass/ContainerItems.scss
@@ -1,4 +1,5 @@
 @import "./Cards.scss";
+@import "_mixins.scss";
 
 .container-items {
     width: 100%;
@@ -24,6 +25,10 @@
     width: 20%;
     height: 100%;
     padding: 2rem 1rem 1rem 1rem;
+    @include mobile {
+        display: none;
+    }
+
     nav {
         display: flex;
         flex-direction: column;
@@ -47,20 +52,15 @@
     cursor: pointer;
     text-transform: capitalize;
     filter: invert(27%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(250%) contrast(100%);
-    
-    >img{
+
+    > img {
         width: 18px;
-        
     }
-    
 }
 
-#water > img{
-    width: 16px
+#water > img {
+    width: 16px;
 }
-
-
-
 
 .container-list-items {
     display: flex;
@@ -70,22 +70,26 @@
     padding: 2rem 1rem 1rem 1rem;
     border-left: 1px solid rgb(231, 231, 231);
     gap: 1rem;
-    >h1 {
+    @include mobile {
+        width: 100%;
+        border-left: none;
+    }
+    > h1 {
         padding-left: 1rem;
     }
 }
 
-.container-list-items-header{
+.container-list-items-header {
     box-sizing: border-box;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding: 1rem;
     gap: 0.5rem;
-    >img{
+    > img {
         width: 22px;
     }
-    >h1{
+    > h1 {
         font-size: 1.5rem;
     }
 }
@@ -101,18 +105,20 @@
     height: 100%;
     gap: 1rem;
     padding: 1rem;
+    @include mobile {
+        justify-content: center;
+    }
 }
 
-.container-cards-footer{
+.container-cards-footer {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100px;
-    
 }
 
-.btn-more{
+.btn-more {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -123,17 +129,12 @@
     color: white;
     font-size: 1rem;
     gap: 0.3rem;
-    box-shadow: 0px 0px 20px rgba(0,0,0,.2);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     transition: all 500ms;
-    &:hover{
+    &:hover {
         background-color: rgb(23, 62, 190);
     }
-    img{
+    img {
         width: 20px;
     }
 }
-
-
-
-
-
