--- a/pokemon-project/src/sass/Header.scss
+++ b/pokemon-project/src/sass/Header.scss
@@ -1,6 +1,6 @@
+@import "_mixins.scss";
 
-
-.header{
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -10,21 +10,31 @@
     height: 100px;
     background-color: rgb(211, 21, 21);
     padding: 1rem;
-    >a{
+    > a {
         font-size: 0.8rem;
         color: white;
         font-weight: 500;
     }
-    >a:hover{
+    > a:hover {
         cursor: pointer;
     }
 }
 
-.logo{
-    width: 160px
+.logo {
+    width: 160px;
 }
 
-.arrow-icon{
-   scale: 1.3;
+.arrow-icon {
+    scale: 1.3;
 }
 
+@include mobile {
+    .header{
+        position: fixed;
+        z-index: 99;
+        
+    }
+    .powered {
+        display: none;
+    }
+}
