--- a/pokemon-project/src/sass/InfoPokemon.scss
+++ b/pokemon-project/src/sass/InfoPokemon.scss
@@ -1,3 +1,5 @@
+@import "_mixins.scss";
+
 .info-pokemon-bg {
     display: flex;
     justify-content: center;
@@ -10,8 +12,6 @@
     backdrop-filter: blur(5px);
     animation-name: animaInfo;
     animation-duration: 500ms;
-    
-    
 }
 
 .info-pokemon-container {
@@ -30,19 +30,23 @@
     animation-duration: 500ms;
     background-color: rgb(151, 151, 151);
     z-index: -1;
-    
-    
+    @include mobile {
+        width: 100%;
+        height: 100vh;
+        border-radius: 0px;
+        margin: 0;
+    }
 }
 
-[info-close]{
+[info-close] {
     animation-name: animaOut;
-    animation-duration: 500ms; 
+    animation-duration: 500ms;
     animation-fill-mode: forwards;
 }
 
-[info-bg-close]{
+[info-bg-close] {
     animation-name: bgClose;
-    animation-duration: 500ms; 
+    animation-duration: 500ms;
     animation-fill-mode: forwards;
 }
 
@@ -75,7 +79,6 @@
     }
 }
 
-
 .info-pokemon-container-header {
     box-sizing: border-box;
     display: flex;
@@ -89,11 +92,11 @@
 @keyframes animaInfo {
     from {
         backdrop-filter: blur(0px);
-        background-color: rgba(0, 0, 0, 0)
+        background-color: rgba(0, 0, 0, 0);
     }
     to {
         backdrop-filter: blur(5px);
-        background-color: rgba(0, 0, 0, 0.4)
+        background-color: rgba(0, 0, 0, 0.4);
     }
 }
 
@@ -154,8 +157,6 @@
     height: 60%;
     background-color: rgb(255, 255, 255);
     border-radius: 20px 20px 0px 0px;
-    
-    
 }
 
 .info-pokemon-text-container-main {
@@ -289,7 +290,7 @@
     color: rgba(19, 19, 19, 0.4);
 }
 
-.bg-image{
+.bg-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
