--- a/pokemon-project/src/sass/MenuMobileToggle.scss
+++ b/pokemon-project/src/sass/MenuMobileToggle.scss
@@ -1,30 +1,36 @@
 @import "./_mixins";
 
 .menu-toggle-container {
+    box-sizing: border-box;
+    overflow: hidden;
     display: none;
     justify-content: center;
     align-items: center;
     width: 40px;
     height: 40px;
 
-    @include mobile{
+    @include mobile {
         display: flex;
     }
-       
-    
+
     input {
+        width: 40px;
+        height: 40px;
         position: absolute;
         opacity: 0;
     }
 
     label {
+        box-sizing: border-box;
+        overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         width: 100%;
         height: 100%;
-        gap: 0.3rem
+        gap: 0.3rem;
+        
     }
 
     span:nth-child(1) {
@@ -42,7 +48,6 @@
         background-color: aliceblue;
         border-radius: 5px;
         transition: all 300ms;
-        
     }
     span:nth-child(3) {
         position: relative;
@@ -51,12 +56,8 @@
         background-color: aliceblue;
         border-radius: 5px;
         transition: all 300ms;
-       
     }
-
-   
 }
-
 
 #checkbox:checked + label span:nth-child(1) {
     position: relative;
@@ -65,7 +66,7 @@
     height: 5px;
     background-color: aliceblue;
     border-radius: 5px;
-    top: 10px
+    top: 10px;
 }
 
 #checkbox:checked + label span:nth-child(2) {
@@ -80,5 +81,5 @@
     height: 5px;
     background-color: aliceblue;
     border-radius: 5px;
-    top: -8px
+    top: -9px;
 }
