--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
