--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -8,6 +8,28 @@
   font-family: 'Roboto', sans-serif;
 }
 
+/*Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #4DA6B3 #F7F7F8;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #F7F7F8;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #4DA6B3;
+  border-radius: 20px;
+  border: 3px solid #ffffff;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
