--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -16,7 +16,7 @@
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 12px;
+  width: 10px;
 }
 
 *::-webkit-scrollbar-track {
@@ -42,6 +42,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 code {
@@ -54,4 +55,5 @@ code {
   align-items: center;
   width: 100%;
   height: 100%;
+  
 }
