--- a/pokemon-project/src/sass/SearchBar.scss
+++ b/pokemon-project/src/sass/SearchBar.scss
@@ -10,6 +10,13 @@
     height: 320px;
     background-color: rgb(241, 241, 241);
     padding-bottom: 3rem;
+    margin-top: 1rem;
+    svg {
+        scale: 1.5;
+        path {
+            stroke: rgb(19, 93, 190);
+        }
+    }
 }
 
 .search-bar-input {
@@ -37,6 +44,9 @@
     }
     ::placeholder {
         color: rgb(126, 126, 126);
+    }
+    img {
+        color: red;
     }
 }
 
