--- a/css-glass-generation/app/page.module.css
+++ b/css-glass-generation/app/page.module.css
@@ -23,6 +23,7 @@
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   font-weight: 600;
+  text-align: center;
 }
 
 .footer {
@@ -111,6 +112,7 @@
   display: flex;
   flex-direction: column;
   width: 30%;
+  min-width: 300px;
   height: 30%;
   border-radius: 20px;
   border: 1px white solid;
