--- a/calculo-area/app/page.module.css
+++ b/calculo-area/app/page.module.css
@@ -32,6 +32,7 @@
   box-shadow: 50px 50px 50px #000000;
   background-image: linear-gradient(180deg, var(--bg-main-color1), var(--bg-main-color2));
   gap: 20px;
+  padding: 20px;
   
 }
 
