--- a/calculo-area/app/page.module.css
+++ b/calculo-area/app/page.module.css
@@ -9,7 +9,7 @@
   --title-color: #ffffff;
   --bg-area-draw: #1C2023;
   --btn-color: #495CF8;
-  --btn-color-disabled:rgb(117, 117, 117)2;
+  --btn-color-disabled: rgb(117, 117, 117)2;
 
   display: flex;
   justify-content: center;
@@ -18,7 +18,7 @@
   height: 100Vh;
   background-color: var(--bg-page);
   font-family: "Roboto", sans-serif;
-  
+
 }
 
 .main {
@@ -33,7 +33,7 @@
   background-image: linear-gradient(180deg, var(--bg-main-color1), var(--bg-main-color2));
   gap: 20px;
   padding: 20px;
-  
+
 }
 
 .title {
@@ -64,8 +64,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  writing-mode:vertical-rl;
-  
+  writing-mode: vertical-rl;
+
 
 }
 
@@ -146,10 +146,28 @@
 .btnCalc:disabled {
   background-color: var(--btn-color-disabled);
   cursor: not-allowed;
- 
+
 }
 
 .btnCalc:hover {
- scale: 1.1;
- 
+  scale: 1.1;
+
+}
+
+@media only screen and (max-width: 600px) {
+  .main {
+    width: 100%;
+    height: 100%;
+    border-radius: 0px;
+  }
+
+  .areaBox {
+    display: grid;
+    grid-template:
+      "none areaA" 1fr "areaB areaDraw" 3fr / 1fr 4fr 1fr;
+    width: 100%;
+    height: 300px;
+
+  }
+
 }
