--- a/calculo-area/app/page.module.css
+++ b/calculo-area/app/page.module.css
@@ -33,7 +33,13 @@
   background-image: linear-gradient(180deg, var(--bg-main-color1), var(--bg-main-color2));
   gap: 20px;
   padding: 20px;
+  border: 1px solid rgb(58, 58, 58);
+  transition: 500ms ease-in-out;
 
+}
+
+.main:hover{
+  border: 1px solid rgb(85, 85, 85);
 }
 
 .title {
